samples/_failures_safe/1761433996_5362eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20297c7a.c: In function ‘main’:
./samples/SAFE/__tmp_20297c7a.c:154:9: error: expected expression at end of input
  154 |         if (len > 0 && user_input[len -
      |         ^~
./samples/SAFE/__tmp_20297c7a.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20297c7a.c:154:9: error: expected declaration or statement at end of input
